  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.48 2009/01/05 01:10:33 snikkel Exp $
==========================================================================

2.9100
------
2.9103-509  new: rc5-72: support for requesting larger packets (#3918)
            new: stream: RC5-72 core for AMD stream video cards (#4099)
            imp: x86: Intel Atom (#4080)
            imp: x86: Pentium III detection (#4121)
            fix: all: Fix OGR-NG middle mark limit miscalculation on odd rulers 
            fix: all: OGR-NG state restored properly after a restart
            fix: linux: Improved OGR-NG cache management (#4076)
            imp: all: Print combined OGR-NG stubs with more details (#4082)
            fix: all: Combined OGR-NG stubs no longer appear to restart (#4083)
            imp: all: Summarized benchmark results (#4108)
            new: arm: OGR-NG ASM cores
            fix: x86: Various AMD CPU Detections (#4074 & #4120)

2.9102-508  new: x86: OGR-NG mmx core
            new: cellbe: OGR-NG SPU C core
            new: cellbe: OGR-NG SPU ASM core
            new: cuda: RC5-72 core for nVidia CUDA video cards (#4030)
            new: haiku: Added support for Haiku operating system
            fix: beos: Fix bug in network code preventing server communication
            imp: x86: Identify AMD "Unknown" processors (#4106)
            fix: x86: Pentium M naming (#4075)

2.9101-507  new: all: Added OGR-NG contest 
            chg: x86: RC5-72 core selection (#4072)
            fix: x86: AMD CPU identification (#4073 and others)
            fix: amd64: Fix bug preventing core pre-selection